SOC-1372 | Fix spacing

--- a/front/main/app/styles/component/_share-feature.scss
+++ b/front/main/app/styles/component/_share-feature.scss
@@ -5,7 +5,7 @@
 		line-height: 30px;
 
 		span {
-			margin-left: 6px;
+			margin-left: 3px;
 		}
 	}
 
